# user_management

./: .env.example  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  init-aws.sh  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 0bc429f0baba_.py  0fd997e3f6d0_.py  13e5ef5c2c70_.py  1b33dc914863_.py  259c1c906e4d_.py  26f0dc6d3150_.py  31535cce9bc9_.py  4076646a8014_.py  65b124ed3f8b_.py  6a8bbe3e034d_initial.py  a28737db5728_created_tables_roles_user_role_.py  a42f8e06f980_.py  aec29d2ba817_.py  afcddce94ad7_.py  bf6421351595_.py  c387699bec53_.py  e78cbb7f6739_.py  ec25725369c8_initial.py
src/app/: containers.py  database.py  main.py
src/app/api/exceptions/: auth_service.py  jwt_service.py  password_security_service.py  permission_service.py  role_service.py  user_service.py
src/app/api/interfaces/: __init__.py
src/app/api/rest/: controllers.py
src/app/core/: config.py
src/app/db/: redis.py  session.py  sqla.py
src/app/domain/: base_entity.py
src/app/domain/entities/: base.py  permission.py  role.py  user.py
src/app/domain/exceptions/: email.py
src/app/domain/permission/: entities.py
src/app/domain/role/: role.py
src/app/domain/user/: user.py
src/app/domain/value_objects/: email.py
src/app/infra/repositories/: code_verification.py  code_verification_repository.py  permission.py  role.py  user.py  user_repository.py
src/app/infra/uow/: uow.py
src/app/infrastructure/exceptions/: user.py
src/app/models/: __init__.py  permission.py  role.py  user.py
src/app/repositories/abs_repositories/: user_repository.py
src/app/repositories/exceptions/: user_repository.py
src/app/repositories/impl_repositories/: user_repository.py
src/app/schemas/: code_verification.py  permission.py  response.py  role.py  sort_filter.py  user.py
src/app/services/: __init__.py  auth.py
src/app/use_cases/: send_code.py
src/tests/: conftest.py
src/tests/alembic/: test_alembic.py  utils.py
(+70 files in other folders)
