[tool.poetry]
name = "user-management"
version = "0.1.0"
description = ""
authors = ["stepan <stepanlezennikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
black = "^24.10.0"
ruff = "^0.9.2"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
