[tool.poetry]
name = "user-management"
version = "0.1.0"
description = ""
authors = ["stepan <stepanlezennikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
black = "^24.10.0"
ruff = "^0.9.2"
isort = "^5.13.2"
pre-commit = "^4.0.1"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.37"
alembic = "^1.14.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.1"
awscli = "^1.37.6"
dependency-injector = "^4.45.0"
pydantic = {extras = ["email"], version = "^2.10.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
