[tool.poetry]
name = "user-management"
version = "0.1.0"
description = ""
authors = ["stepan <stepanlezennikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
black = "^24.10.0"
ruff = "^0.9.2"
isort = "^5.13.2"
pre-commit = "^4.0.1"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.37"
alembic = "^1.14.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.1"
dependency-injector = "^4.45.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
aioboto3 = "^13.4.0"
redis = "^5.2.1"
pytest = "^8.3.4"
faker = "^35.2.0"
pytest-alembic = "^0.11.1"
pytest-asyncio = "^0.25.3"
orjson = "^3.10.15"
bcrypt = "^4.2.1"
pyjwt = "^2.10.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["src/alembic/versions/*", "env.py"]